# alloy-codegen

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/workflows/: bootstrap-family.yml  publish-alloy-devices.yml  release.yml  tests.yml
data/: artifact_footprint_budget.toml  artifact_footprint_overrides.toml  known_devices.meta.toml  known_devices.toml  source_pins.toml
docs/: COVERAGE_MATRIX.md  adc-channel-enum.md  adding-support.md  artifact-footprint-budget.md  artifact-layout.md  autogen-device-patches.md  canonical-device-yaml.md  codegen-alloy-boundary.md  configuration-layer.md  known-devices.md  patch-as-diff.md  peripheral-trait-templates.md  runtime-cpp-smoke-compile.md  updating-goldens.md
openspec/: ROADMAP.md  project.md
schema/canonical_device_v2_1/: README.md  validate.py
schemas/: canonical-device-ir-v1.schema.json  runtime-config-request-v1.schema.json
schemas/peripheral_traits/: i2c.json  spi.json  uart.json
scripts/: autogen_device_patches.py  bake_tier_data_into_yaml.py  clean_orphan_yaml_references.py  diff_device_patch.py  extract_peripheral_template.py  minify_device_patches.py  populate_i2c_tier234.py  populate_kernel_clock_max.py  populate_uart_spi_tier234.py  regen_canonical_fixtures.py  regen_canonical_yamls.py  run_compile_gate.py  update_goldens.py  update_goldens_pytest.sh
src/alloy_codegen/: __init__.py  affected_families.py  artifact_contract.py  (+57 more)
tests/: conftest.py  golden_helpers.py  test_adc_channel_enum.py  test_additional_validity_concepts.py  test_affected_families.py  test_alloy_devices_yml_consumer.py  test_artifact_contract_docs.py  test_artifact_footprint_budget.py  test_auto_update_goldens.py  test_autogen_device_patches.py  test_avr_da.py  test_board_support_package_emitter.py  test_boundary.py  test_bulk_admit.py  test_canonical_device_v2_1.py  test_canonical_device_yaml.py  test_cli.py  test_clock_backend_st.py  test_cmake_emission.py  test_compile_invariants.py  test_compile_smoke.py  test_connector_model.py  test_consumer_verification.py  test_context.py  test_dma_controller_hw_traits.py  test_dma_controller_irq_numbers.py  test_emit.py  test_emit_connector_traits.py  test_emit_routes.py  test_emit_v2_1.py  test_emit_v2_1_core.py  test_entrypoint.py  test_espressif.py  test_family_publishability.py  test_fetch.py  test_forbidden_patterns.py  test_foundational_families.py  test_gpio_semantic_coverage.py  test_gpio_semantic_traits.py  test_gpio_tier_1_fields.py  (+44 more)
tools/: bump_devices_yml.py  import_probe_rs_targets.py  runtime_cpp_smoke.py
(+729 files in other folders)
