[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "alloy-codegen"
version = "0.1.0"
description = "Canonical device-data pipeline and artifact generator for Alloy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Alloy Embedded" },
]
dependencies = []

[project.scripts]
alloy-codegen = "alloy_codegen.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.hatch.build.targets.wheel]
packages = ["src/alloy_codegen"]
