[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "alloy-codegen"
version = "0.5.0"
description = "Canonical device-data pipeline and artifact generator for Alloy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Alloy Embedded" },
]
dependencies = [
    # ingest-zephyr-dts-as-source: parse Zephyr DTS files in
    # ``alloy_codegen.sources.zephyr_dts``.  ``devicetree>=0.0.2`` ships
    # ``dtlib`` (low-level structural parser) and ``edtlib`` (binding-aware).
    "devicetree>=0.0.2",
    # define-canonical-device-yaml-schema: emit + parse + validate
    # the canonical per-device YAML (foundation of the alloy-devices-yml
    # data-repo split).
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.scripts]
alloy-codegen = "alloy_codegen.cli:main"

[project.urls]
Homepage = "https://github.com/Alloy-Embedded/alloy-codegen"
Repository = "https://github.com/Alloy-Embedded/alloy-codegen"
Changelog = "https://github.com/Alloy-Embedded/alloy-codegen/blob/main/CHANGELOG.md"
Issues = "https://github.com/Alloy-Embedded/alloy-codegen/issues"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "compile_smoke: C++ compile smoke tests (require --compile-smoke flag + clang++ on PATH)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.hatch.build.targets.wheel]
packages = ["src/alloy_codegen"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    # Static type checker — strict on emitter / IR / stages modules,
    # basic elsewhere (see ``pyrightconfig.json``).  Added by
    # ``enforce-strict-typing-and-golden-coverage``.
    "pyright>=1.1.380",
]
